# vibird

./: .gitignore  CLA.md  README.md  README.zh-CN.md
assets/: placeholder.veap
claude-plugin/: .mcp.json  README.md
claude-plugin/.claude-plugin/: plugin.json
claude-plugin/hooks/: hooks.json
claude-plugin/skills/vibird-setup/: SKILL.md
docs/: DESIGN.md  SNAPSHOT.md
docs/adr/: ADR-0001-positioning.md  ADR-0002-firmware-rust-esp-rs.md  ADR-0003-device-bridge-protocol.md  ADR-0004-on-device-rendering.md
docs/agent/: SNAPSHOT.md  atoms3r-hardware.md  emote-pack-format.md  index.md
docs/agent/adr/: ADR-0001-positioning.md  ADR-0002-firmware-rust-esp-rs.md  ADR-0003-device-bridge-protocol.md  ADR-0004-on-device-rendering.md  ADR-0005-character-liz.md
docs/agent/findings/: finding-gc9107-color-order.md  finding-rust-animation-feasibility.md
docs/findings/: finding-gc9107-color-order.md
docs/human/en/: design.md  getting-started.md  hardware.md  index.md
docs/human/zh/: design.md  getting-started.md  hardware.md  index.md
emote/: Cargo.toml
emote/src/: lib.rs
firmware/: Cargo.toml  README.md
firmware/src/: config.rs  gesture.rs  mdns.rs  ws.rs
host/: Cargo.toml
host/crates/vibird-bridge/: Cargo.toml
host/crates/vibird-bridge/src/: asr.rs  hook.rs  inject.rs  lib.rs  mcp.rs
host/crates/vibird-cli/: Cargo.toml
host/crates/vibird-cli/src/: main.rs
host/crates/vibird-emote-pack/: Cargo.toml
host/crates/vibird-emote-pack/examples/: gen_placeholder.rs
host/crates/vibird-emote-pack/src/: lib.rs  main.rs
protocol/: Cargo.toml  PROTOCOL.md
protocol/src/: lib.rs
python/: Cargo.toml  README.md  pyproject.toml
python/.cargo/: config.toml
python/src/: lib.rs
scripts/: asr_local.py  asr_sensevoice.py  asr_server.py  run-bridge.sh
