[package]
name = "vibird-protocol"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "AGPL-3.0-only"
description = "Vibird device↔bridge wire protocol — shared no_std + serde types used by both the firmware and the host bridge."
repository = "https://github.com/Hakureirm/vibird"

[dependencies]
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }

[features]
default = []
# Enable std (host side). The firmware leaves this off (no_std + alloc).
std = ["serde/std"]

[dev-dependencies]
serde_json = "1"
