[package]
name = "vibird-bridge"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Vibird host bridge — WebSocket server, ASR, and Claude Code integration (the reusable product core)."

[dependencies]
vibird-protocol.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
# 云端 ASR(Whisper 兼容)用的 HTTP 客户端;rustls 避免 openssl。
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "multipart", "json"] }
